2007-05-09  Jonathan Chambers  <joncham@gmail.com>

	* Thread.cs: Add ApartmentState related tests.

2007-04-03  Gert Driesen  <drieseng@users.sourceforge.net>

	* MutexTest.cs: Enabled test for bug #79358.

2006-12-13  Gert Driesen  <drieseng@users.sourceforge.net>

	* MutexTest.cs: Added test for bug #79358. Code formatting, no longer
	derive from (deprecated) TestCase.

2006-06-14  Sebastien Pouliot  <sebastien@ximian.com>

	* ExecutionContextTest.cs: Changed Run test to execute only under
	CAS until bug #78306 (CompressedStack) is fixed.

2006-06-04  Zoltan Varga  <vargaz@gmail.com>

	* InterlockedTest.cs: Fix Interlocked.Add tests.

2006-04-30  Gert Driesen  <drieseng@users.sourceforge.net>

	* TimerTest.cs: Added test for bug #78208. Marked individual tests
	NotWorking instead of the test class to enable test for bug #78208. 

2006-01-18  Atsushi Enomoto  <atsushi@ximian.com>

	* ThreadTest.cs : mark not-working tests as [Ignore] since it blocks
	  run-test-ondotnet under 2.0 profile.

2006-01-18  Atsushi Enomoto  <atsushi@ximian.com>

	* MutexTest.cs : Marked TestWaitAndFoget1 as [Ignore]. Under
	  .NET 2.0 it breaks nunit-console (breaks its own AppDomain).

2005-10-06  Sebastien Pouliot  <sebastien@ximian.com>

	* ThreadTest.cs: Added regression test for #76332 when an IPrincipal
	instance should be copied in any new thread created.

2005-06-30  Ben Maurer  <bmaurer@ximian.com>

	* MutexTest.cs: Redisable. They didn't work so well ;-(.

2005-06-28  Ben Maurer  <bmaurer@ximian.com>

	* MutexTest.cs: Re-enable the mutex tests. They seem to work for
	me now when I ran them in a loop on the smp box.

2005-06-06 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ThreadTest.cs: sanitize waiting for a thread that might be already
	done. Added test for Thread.Start called after thread.Abort, which used
	to segfault.

2005-05-05 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* MonitorTest.cs: a pair of tests for Monitor.
