@@ -1,6 +1,10 @@
+2007-05-16  Gert Driesen  <drieseng@users.sourceoforge.net>
+
+	* ThreadTest.cs: Fix build using csc 1.x.
+
 2007-05-09  Jonathan Chambers  <joncham@gmail.com>
 
-	* Thread.cs: Add ApartmentState related tests.
+	* ThreadTest.cs: Add ApartmentState related tests.
 
 2007-04-03  Gert Driesen  <drieseng@users.sourceforge.net>
 
